# ticket-similarity

./: README.md  _config.yaml  app.py  clean_entries.py  extract_structured_data.py  pyproject.toml  utils.py
